# sig

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: rust.yml
crates/sig/: Cargo.toml
crates/sig-pattern/: Cargo.toml
crates/sig-pattern/src/: byte.rs  lib.rs  pattern.rs  util.rs
crates/sig/src/: args.rs  main.rs
crates/sig/tests/: main.rs
