[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
authors = ["PotatoMaster101"]
categories = ["command-line-utilities"]
description = "Signature tool"
edition = "2024"
keywords = ["signature"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/PotatoMaster101/sig"
version = "0.1.0"

[workspace.dependencies]
sig-pattern = { path = "crates/sig-pattern" }

[workspace.lints.clippy]
cargo = { level = "warn", priority = 0 }
nursery = { level = "warn", priority = 0 }
pedantic = { level = "warn", priority = 0 }

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = "symbols"
