[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "sig"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
clap = { features = ["derive"], version = "4.6" }
sig-pattern = { workspace = true }

[dev-dependencies]
tempfile = { version = "3.27" }

[lints]
workspace = true

[[test]]
name = "functional"
path = "tests/main.rs"
